--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -145,21 +145,21 @@
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExample7">
               <a *ngIf="viewFlag.viewSaleReport" href="javascript:void(0)" [routerLink]="['/report/sale']" id="collapseExample7">Sale</a>
-              <a *ngIf="viewFlag.viewSaleReport" href="javascript:void(0)" [routerLink]="['/report/cashCollection']" id="collapseExample7">Cash Collection</a>
+              <a *ngIf="viewFlag.viewCashCollectionReport" href="javascript:void(0)" [routerLink]="['/report/cashCollection']" id="collapseExample7">Cash Collection</a>
               <a *ngIf="viewFlag.viewPurchaseReport" href="javascript:void(0)" [routerLink]="['/report/purchase']" id="collapseExample7">Purchase</a>
-              <a *ngIf="viewFlag.viewEyeTestReport" href="javascript:void(0)" [routerLink]="['/report/expenes']" id="collapseExample7">Expenses </a>
+              <a *ngIf="viewFlag.viewExpenesReport" href="javascript:void(0)" [routerLink]="['/report/expenes']" id="collapseExample7">Expenses </a>
               <a *ngIf="viewFlag.viewInventoryReport" href="javascript:void(0)" [routerLink]="['/report/inventory']" id="collapseExample7">Inventory</a>
-              <a *ngIf="viewFlag.viewInventoryReport" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Reminder </a>
+              <a *ngIf="viewFlag.viewReminderReport" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Reminder </a>
               <!-- <a *ngIf="viewFlag.viewInventoryReport" href="javascript:void(0)" [routerLink]="['/report/inventory']" id="collapseExample7">Sale Profit </a> -->
-              <a *ngIf="viewFlag.viewInventoryReport" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Sale Payment </a>
-              <a *ngIf="viewFlag.viewInventoryReport" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Customer </a>
-              <a *ngIf="viewFlag.viewInventoryReport" href="javascript:void(0)"  (click)="ComingSoon()"  id="collapseExample7">Ledger </a>
+              <a *ngIf="viewFlag.viewSalePaymentReport" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Sale Payment </a>
+              <a *ngIf="viewFlag.viewCustomerReport" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Customer </a>
+              <a *ngIf="viewFlag.viewLedgerReport" href="javascript:void(0)"  (click)="ComingSoon()"  id="collapseExample7">Ledger </a>
               <a *ngIf="viewFlag.viewProductTransferReport" href="javascript:void(0)" [routerLink]="['/report/product-transfer']" id="collapseExample7">Product Transfer</a>
               <a *ngIf="viewFlag.viewProductReturnReport" href="javascript:void(0)" [routerLink]="['/report/product-return']" id="collapseExample7">Product Return</a>
-              <a *ngIf="viewFlag.viewEyeTestReport" href="javascript:void(0)" [routerLink]="['/report/supplierCredit']" id="collapseExample7">Supplier Credit</a>
+              <a *ngIf="viewFlag.viewSupplierCreditReport" href="javascript:void(0)" [routerLink]="['/report/supplierCredit']" id="collapseExample7">Supplier Credit</a>
               <a *ngIf="viewFlag.viewEyeTestReport" href="javascript:void(0)" [routerLink]="['/report/eyetest']"  id="collapseExample7">Eye Test</a>
-              <a *ngIf="viewFlag.viewEyeTestReport" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Loyalty </a>
-              <a *ngIf="viewFlag.viewEyeTestReport" href="javascript:void(0)" [routerLink]="['/report/oldSale']" id="collapseExample7">Old Sale </a>
+              <a *ngIf="viewFlag.viewLoyaltyReport" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Loyalty </a>
+              <a *ngIf="viewFlag.viewOldSaleReport" href="javascript:void(0)" [routerLink]="['/report/oldSale']" id="collapseExample7">Old Sale </a>
             </div>
           </div>
           <!-- companyadmin end report -->
@@ -171,7 +171,7 @@
               <a *ngIf="viewFlag.viewInventoryExcelImport" href="javascript:void(0)" [routerLink]="['/uploader/purchase']" id="collapseExample8" >Inventory</a>
               <a *ngIf="user?.is_direct === true " href="javascript:void(0)" [routerLink]="['/uploader/customer']" id="collapseExample8" >Customer</a>
               <a *ngIf="user?.is_direct === true" href="javascript:void(0)" [routerLink]="['/uploader/bill']" id="collapseExample8" >Bill</a>
-              <a  href="javascript:void(0)" [routerLink]="['/uploader/supplier-uploader']" id="collapseExample8" >Supplier</a>
+              <a *ngIf="viewFlag.viewSupplierExcelImport" href="javascript:void(0)" [routerLink]="['/uploader/supplier-uploader']" id="collapseExample8" >Supplier</a>
             </div>
           </div>
           <!-- companyadmin end Uploader -->
