--- a/web1/src/app/report/expense/expense.component.html
+++ b/web1/src/app/report/expense/expense.component.html
@@ -18,13 +18,13 @@
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>From</mat-label>
                                             <input matInput name="FromDate" type="date" [(ngModel)]="data.FromDate"
-                                                #DOBcontrol [disabled]="!editEyeTestReport"/>
+                                                #DOBcontrol [disabled]="!editExpenesReport"/>
                                         </mat-form-field>
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>To</mat-label>
-                                            <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate" [disabled]="!editEyeTestReport"/>
+                                            <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate" [disabled]="!editExpenesReport"/>
                                         </mat-form-field>
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
