--- a/web1/src/app/common/about/about.component.html
+++ b/web1/src/app/common/about/about.component.html
@@ -14,6 +14,21 @@
                         </div>
                         <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
                            <div class="col-12" style="font-size: 20px; line-height: 30px;">
+                               <h2 style="color: #ffea00;"> New Updates Date 28-01-2024 </h2>
+                               <P>1. Watermark on Bill.</P>
+                               <P>Follow steps</P>
+                                    <ul>
+                                        <li>Go to administration Click on shop => click on edit button => Upload watermark image with only png format => then click on update button => After Software logout and login. </li>
+                                    </ul>
+                               <P>2. If you want to adjust the watermark on Bill format.</P>
+                               <P>Follow steps</P>
+                                    <ul>
+                                        <li>Go to administration => click on company settings => click on bill format => adjust and save.</li>
+                                    </ul>
+                            </div>
+                        </div>
+                        <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
+                           <div class="col-12" style="font-size: 20px; line-height: 30px;">
                                <h2 style="color: #ffea00;"> New Updates Date 26-01-2024 </h2>
                                <P>1. Employee profile added with logout button. check in employee login.</P>
                                <P>2. New option added for employees "Discount permission after the bill"</P>
