--- a/web1/src/app/report/old-sale/old-sale.component.html
+++ b/web1/src/app/report/old-sale/old-sale.component.html
@@ -14,7 +14,7 @@
                         <mat-tab-group>
                             <!-- Bill  -->
                            <!-- Bill  -->
-                           <mat-tab  label="Sale">
+                           <mat-tab *ngIf="viewOldSaleReport" label="Sale">
                             <div class="body">
                                 <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getBillMaster()">
                                     <div class="row" >
@@ -31,14 +31,14 @@
                                                 <mat-label>From</mat-label>
                                                 <input matInput name="FromDate" type="date"
                                                    [(ngModel)]="BillMaster.FromDate"
-                                                    #DOBcontrol />
+                                                    #DOBcontrol [disabled]="!editOldSaleReport" />
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>To</mat-label>
                                                 <input matInput type="date" name="ToDate"
-                                                    [(ngModel)]="BillMaster.ToDate"  />
+                                                    [(ngModel)]="BillMaster.ToDate" [disabled]="!editOldSaleReport" />
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
@@ -176,7 +176,7 @@
                             </div>
                         </mat-tab>
                         <!-- Bill (Detailed) -->
-                        <mat-tab  label="Sale (Product Type)">
+                        <mat-tab *ngIf="viewOldSaleProductReport" label="Sale (Product Type)">
                             <div class="body">
                                 <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getBillDetails()">
                                     <div class="row" >
@@ -194,14 +194,14 @@
                                                 <mat-label>From</mat-label>
                                                 <input matInput name="FromDate" type="date"
                                                     [(ngModel)]="Billdetail.FromDate" #DOBcontrol
-                                                     />
+                                                    [disabled]="!editOldSaleProductReport" />
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>To</mat-label>
                                                 <input matInput type="date" name="ToDate"
-                                                    [(ngModel)]="Billdetail.ToDate"
+                                                    [(ngModel)]="Billdetail.ToDate" [disabled]="!editOldSaleProductReport"
                                                     />
                                             </mat-form-field>
                                         </div>
