--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -31,14 +31,14 @@
                                                     <mat-label>From</mat-label>
                                                     <input matInput name="FromDate" type="date"
                                                         (change)="getChangeDate()" [(ngModel)]="BillMaster.FromDate"
-                                                        #DOBcontrol />
+                                                         #DOBcontrol [disabled]="!editSaleReport" />
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>To</mat-label>
                                                     <input matInput type="date" name="ToDate"
-                                                        [(ngModel)]="BillMaster.ToDate" />
+                                                        [(ngModel)]="BillMaster.ToDate"  [disabled]="!editSaleReport" />
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
@@ -1410,7 +1410,7 @@
                                 </div>
                             </mat-tab>
                             <!-- get Product Cancel -->
-                            <mat-tab label="Product Cancel">
+                            <mat-tab *ngIf="viewProductCancelReport" label="Product Cancel">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getProductCancel()">
                                         <div class="row">
@@ -1428,7 +1428,7 @@
                                                     <mat-label>From</mat-label>
                                                     <input matInput name="FromDate" type="date"
                                                         [(ngModel)]="cancel.FromDate" #DOBcontrol
-                                                        [disabled]="!editSaleProductReport" />
+                                                        [disabled]="!editProductCancelReport" />
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
@@ -1436,7 +1436,7 @@
                                                     <mat-label>To</mat-label>
                                                     <input matInput type="date" name="ToDate"
                                                         [(ngModel)]="cancel.ToDate"
-                                                        [disabled]="!editSaleProductReport" />
+                                                        [disabled]="!editProductCancelReport" />
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
@@ -2003,7 +2003,7 @@
                                 </div>
                             </mat-tab>
                             <!-- pending product  -->
-                            <mat-tab label="Product Pending">
+                            <mat-tab *ngIf="viewSaleProductPendingReport" label="Product Pending">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getProductPending()">
                                         <div class="row">
@@ -2021,7 +2021,7 @@
                                                     <mat-label>From</mat-label>
                                                     <input matInput name="FromDate" type="date"
                                                         [(ngModel)]="pending.FromDate" #DOBcontrol
-                                                        [disabled]="!editSaleProductReport" />
+                                                        [disabled]="!editSaleProductPendingReport" />
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
@@ -2029,7 +2029,7 @@
                                                     <mat-label>To</mat-label>
                                                     <input matInput type="date" name="ToDate"
                                                         [(ngModel)]="pending.ToDate"
-                                                        [disabled]="!editSaleProductReport" />
+                                                        [disabled]="!editSaleProductPendingReport" />
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
@@ -2550,7 +2550,7 @@
                                 </div>
                             </mat-tab>
                             <!-- sale product expiry -->
-                            <mat-tab label="Sale (Product Expiry)">
+                            <mat-tab *ngIf="viewSaleProductExpiryReport" label="Sale (Product Expiry)">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getBillExpiry()">
                                         <div class="row">
@@ -2559,7 +2559,7 @@
                                                     <mat-label>From</mat-label>
                                                     <input matInput name="FromDate" type="date"
                                                         [(ngModel)]="BillExpiry.FromDate" #DOBcontrol
-                                                        [disabled]="!editSaleProductReport" />
+                                                        [disabled]="!editSaleProductExpiryReport" />
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
@@ -2567,7 +2567,7 @@
                                                     <mat-label>To</mat-label>
                                                     <input matInput type="date" name="ToDate"
                                                         [(ngModel)]="BillExpiry.ToDate"
-                                                        [disabled]="!editSaleProductReport" />
+                                                        [disabled]="!editSaleProductExpiryReport" />
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
