--- a/server/views/AssignFitterPDF.ejs
+++ b/server/views/AssignFitterPDF.ejs
@@ -33,10 +33,10 @@
                  <th style="border: none;text-align: left;">Name</th>
                  <td style="border: none;">: <%=i.CustomerName%></td>
                </tr>
-               <!-- <tr>
-                 <th style="border: none;text-align: left;"> Mobile No.</th>
-                 <td style="border: none;">: <%=i.MobileNo1%></td>
-               </tr> -->
+               <tr>
+                 <th style="border: none;text-align: left;"> Invoice No.</th>
+                 <td style="border: none;">: <%=i.InvoiceNo%></td>
+               </tr>
                <tr>
                  <th style="border: none;text-align: left;"> Invoice Date</th>
                  <td style="border: none;">: <%=i.InvoiceDate%></td>
