--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -51,7 +51,7 @@
                         <mat-label>Doctor</mat-label>
                         <mat-select name="Doctor" [(ngModel)]="BillMaster.Doctor" [disabled]="BillMaster.ID !== null"
                             #Doctorcontrol>
-                            <mat-option value="None"></mat-option>
+                            <mat-option value="null"></mat-option>
                             <mat-option *ngFor="let doc of doctorList let i = index;" [value]="doc.ID">
                                 {{doc.Name}}
                             </mat-option>
@@ -79,7 +79,7 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Tray No.</mat-label>
                         <mat-select name="TrayNo" [(ngModel)]="BillMaster.TrayNo" #Typecontrol>
-                            <mat-option value="None"></mat-option>
+                            <mat-option value="null"></mat-option>
                             <mat-option *ngFor="let Tray of trayNoList let i = index;" [value]="Tray.Name">
                                 {{Tray.Name}}
                             </mat-option>
