--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -51,7 +51,7 @@
                         <mat-label>Doctor</mat-label>
                         <mat-select name="Doctor" [(ngModel)]="BillMaster.Doctor" [disabled]="BillMaster.ID !== null"
                             #Doctorcontrol>
-                            <mat-option value="null"></mat-option>
+                            <mat-option [value]=0></mat-option>
                             <mat-option *ngFor="let doc of doctorList let i = index;" [value]="doc.ID">
                                 {{doc.Name}}
                             </mat-option>
@@ -67,7 +67,7 @@
                         <mat-select name="Employee" [(ngModel)]="BillMaster.Employee"
                             (selectionChange)="changeEmployee()" [disabled]="user.UserGroup !== 'CompanyAdmin'  &&  BillMaster.ID !== null
                             " #Employeecontrol>
-                            <mat-option value="None"></mat-option>
+                            <mat-option [value]=0></mat-option>
                             <mat-option *ngFor="let el of employeeList let i = index;" [value]="el.ID">
                                 {{el.Name}}
                             </mat-option>
