--- a/web1/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web1/src/app/inventory/purchase-list/purchase-list.component.html
@@ -126,6 +126,9 @@
                             <button *ngIf="deletePurchaseList" class="bg-btn" (click)="deleteItem(i)">
                               <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
                             </button>
+                            <button *ngIf="deletePurchaseList" class="bg-btn" (click)="openModal1(content1,data)">
+                              <mat-icon class="edit_icon ms-1">attach_money </mat-icon>
+                            </button>
                           </td>
                           <td>{{dataList.length - i }}</td>
                           <td>{{data.SupplierName}}</td>
@@ -217,5 +220,110 @@
       <div class="modal-footer">
       </div>
     </form>
+  </div>
+</ng-template>
+
+<!-- payment -->
+<ng-template #content1 role="document" let-modal>
+  <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
+      <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">Invoice Payment</h3>
+      <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+      <form #f3="ngForm" >
+          <div class="row">
+              <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                  <mat-form-field class="example-full-width mb-0">
+                      <mat-label style="color: rgb(255 0 0) !important;letter-spacing: 1px; font-weight: 800;">Balance</mat-label>
+                      <input class="redclass" type="number" min="0" style="color: rgb(255, 0, 0) !important; font-size: 17px !important; font-weight: 800;"
+                          matInput name="Total Amount" value="{{ this.applyPayment.PayableAmount}}" disabled
+                          #TOutstandingcontrol [autocomplete]="false">
+                  </mat-form-field>
+              </div>
+              <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                  <mat-form-field class="example-full-width mb-0">
+                      <mat-label>New Payment</mat-label>
+                      <input type="number" min="0" style="font-size: 17px !important;" matInput name="PaymentAmount"
+                          [(ngModel)]="applyPayment.PaidAmount" [autocomplete]="false">
+                  </mat-form-field>
+              </div>
+              <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0"
+                  *ngIf="applyPayment.ApplyReward !== true && applyPayment.ApplyReturn !== true">
+                  <mat-form-field class="example-full-width mb-0">
+                      <mat-label>Payment Mode</mat-label>
+                      <mat-select name="PayMode" [(ngModel)]="applyPayment.PaymentMode" required #GSTTypecontrol1>
+                          <mat-option [value]="p.Name" *ngFor="let p of PaymentModesList"> {{p.Name}} </mat-option>
+                      </mat-select>
+                  </mat-form-field>
+              </div>
+              <div class="col-xl-4 col-lg-3 col-md-3 col-6 mb-0">
+                  <mat-form-field class="example-full-width mb-0">
+                      <mat-label>Reference</mat-label>
+                      <input style="font-size: 17px !important;" matInput name="NamePay"
+                          [(ngModel)]="applyPayment.PaymentReferenceNo" #NamePaycontrol [autocomplete]="false">
+                      <mat-error>
+                          Name is required
+                      </mat-error>
+                  </mat-form-field>
+              </div>
+              <div class="col-xl-2 col-lg-2 col-md-2 col-4">
+                  <button type="submit" [disabled]="f3.invalid || this.applyPayment.PaymentMode === 0"
+                      mat-raised-button color="primary">Apply Payment</button>
+              </div>
+             
+          </div>
+      </form>
+      <div class="row mt-3">
+          <div class="col-lg-5 col-md-5 col-12">
+              <div class="table-responsive " style="border: 1px solid #ff5100;overflow-x: scroll; max-height: 200px;">
+                  <table class="table table-striped table-hover table-sm table-bordered"
+                      style="border: 2px solid #fff !important; margin: 0; overflow-y: scroll; max-height: 150px;">
+                      <thead>
+                          <tr>
+                              <th style="background-color: #ff5100; color: #fff !important;">Invoice No</th>
+                              <th>Invoice Amount</th>
+                              <th>Due Amount</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr class="text-center" *ngFor="let inv of invoiceList; let i = index;">
+                              <td class="text-left" style="background-color: #ff5100; color: #fff;">{{inv.InvoiceNo}}
+                              </td>
+                              <td class="text-left">{{inv.TotalAmount |
+                                  currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}
+                              </td>
+                              <td class="text-left">{{inv.DueAmount |
+                                  currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}
+                              </td>
+
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
+          </div>
+          <div class="col-lg-6 col-md-7 col-12 mt-5 mt-md-0 ms-auto">
+              <div class="table-responsive " style="border: 1px solid #ff5100;overflow-x: scroll; max-height: 200px;">
+                  <table class="table table-striped table-hover table-sm table-bordered"
+                      style="border: 2px solid #fff !important; margin: 0; ">
+                      <thead>
+                          <tr>
+                              <th>PaymentDate</th>
+                              <th>PaymentMode</th>
+                              <th>ReferenceNo</th>
+                              <th style="background-color: #ff5100; color: #fff !important;">PaidAmount</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr style="white-space:nowrap;" class="text-center"
+                              *ngFor="let paid of paidList; let i = index;">
+                              <td class="text-left">{{dateFormat(paid.PaymentDate)}}</td>
+                              <td class="text-left">{{paid.PaymentMode}}</td>
+                              <td class="text-left">{{paid.PaymentReferenceNo}}</td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
+          </div>
+      </div>
   </div>
 </ng-template>
