--- a/web1/src/app/report/sale-report/sale-report.component.css
+++ b/web1/src/app/report/sale-report/sale-report.component.css
@@ -75,3 +75,13 @@
   width: 30px;
   box-shadow: 1px 1px 10px #0003;
 }
+
+.mat-tab-label, .mat-tab-link {
+  color: rgb(255 0 0) !important;
+}
+
+.mat-tab-label, .mat-tab-link {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 16px !important;
+  font-weight: 500;
+}
