--- a/web1/src/app/common/common.component.css
+++ b/web1/src/app/common/common.component.css
@@ -80,11 +80,11 @@
   color: rgb(255, 255, 255);
 }
 .navbar .nav-links a {
-  padding: 8px 10px;
+  padding: 0.5rem 0.6rem;
   text-decoration: none;
   font-weight: 550;
   color: white;
-  font-size: 15px;
+  font-size: 1rem;
 }
 /* Hover effects */
 .navbar .nav-links a:hover{
