--- a/web1/src/styles.scss
+++ b/web1/src/styles.scss
@@ -630,3 +630,40 @@ thead :not([scope=row]):first-child {
 //     padding: 0.5em !important;
 //      border-top: 0.0em solid transparent;
 // }
+
+
+@media only screen and (max-width: 1400px) and (min-width: 1300px)  {
+    html{
+     font-size: 90% ;
+  }
+ }
+@media only screen and (max-width: 1300px) and (min-width: 1200px)  {
+    html{
+     font-size: 90% ;
+  }
+ }
+  @media only screen and (max-width: 1200px) and (min-width: 1100px)  {
+    html{
+     font-size: 75% ;
+  }
+ }
+  @media only screen and (max-width: 1100px) and (min-width: 1000px)  {
+    html{
+        font-size: 70% ;
+  }
+ }
+  @media only screen and (max-width: 1000px) and (min-width: 900px)  {
+    html{
+        font-size: 70% ;
+  }
+ }
+  @media only screen and (max-width: 900px) and (min-width: 800px)  {
+    html{
+        font-size: 70% ;
+  }
+ }
+  @media only screen and (max-width: 800px) and (min-width: 700px)  {
+    html{
+        font-size: 65% ;
+  }
+ }
